--- a/contato.html
+++ b/contato.html
@@ -170,6 +170,7 @@
             <p class="footer-descricao">Plushy © Alguns direitos reservados.</p>
         </div>
     </footer>
+    <script src="/script.js"></script>
 </body>
 
 </html>
