--- a/comissoes-form.html
+++ b/comissoes-form.html
@@ -201,6 +201,7 @@
             <p class="footer-descricao">Plushy © Alguns direitos reservados.</p>
         </div>
     </footer>
+    <script src="/script.js"></script>
 </body>
 
 </html>
