--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@
             <p class="footer-descricao">Plushy © Alguns direitos reservados.</p>
         </div>
     </footer>
+
+    <script src="/script.js"></script>
 </body>
 
 </html>
