--- a/pelucias-urso.html
+++ b/pelucias-urso.html
@@ -113,6 +113,7 @@
                 <p class="footer-descricao">Plushy © Alguns direitos reservados.</p>
             </div>
         </footer>
+        <script src="/script.js"></script>
 </body>
 
 </html>
