--- a/pelucias.html
+++ b/pelucias.html
@@ -137,6 +137,7 @@
                 <p class="footer-descricao">Plushy © Alguns direitos reservados.</p>
             </div>
         </footer>
+        <script src="/script.js"></script>
 </body>
 
 </html>
