--- a/termos-condicoes.html
+++ b/termos-condicoes.html
@@ -102,6 +102,7 @@
             <p class="footer-descricao">Plushy © Alguns direitos reservados.</p>
         </div>
     </footer>
+    <script src="/script.js"></script>
 </body>
 
 </html>
