--- a/comissoes.html
+++ b/comissoes.html
@@ -7,13 +7,14 @@
     <title>Comissões | Plushy</title>
     <meta name="description" content="Comissões | Plushy.">
 
-    <link rel="preload" href="/css/style.css" as="style">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="preload" href="/css/style.min.css" as="style">
+    <link rel="stylesheet" href="/css/style.min.css">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body>
@@ -40,13 +41,13 @@
     <main class="intro">
         <div class="titulo-intro-bg">
             <div class="titulo-intro container">
-                <p class="subtitulo-intro">Faça do seu jeito</p>
-                <h1 class="titulo">Pelúcia Customizada (Comissão)</h1>
+                <p class="subtitulo-intro fadeInLeft" data-anime="200">Faça do seu jeito</p>
+                <h1 class="titulo fadeInLeft" data-anime="400">Pelúcia Customizada (Comissão)</h1>
             </div>
         </div>
 
         <main class="pelucia">
-            <div class="pelucia-bg container">
+            <div class="pelucia-bg container fadeInLeft" data-anime="600">
                 <div class="pelucia-conteudo">
                     <div class="pelucia-imagens">
                         <img src="/img/comissao/img-urso-cust.jpg" width="1120" height="1070" alt="Customização urso">
@@ -112,6 +113,7 @@
                 <p class="footer-descricao">Plushy © Alguns direitos reservados.</p>
             </div>
         </footer>
+        <script src="/simple-anime.js"></script>
         <script src="/script.js"></script>
 </body>
 
