--- a/contato.html
+++ b/contato.html
@@ -7,13 +7,14 @@
     <title>Contato | Plushy</title>
     <meta name="description" content="Contato | Plushy.">
 
-    <link rel="preload" href="/css/style.css" as="style">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="preload" href="/css/style.min.css" as="style">
+    <link rel="stylesheet" href="/css/style.min.css">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body id="pagina-bg">
@@ -40,12 +41,12 @@
     <main class="intro">
         <div class="titulo-intro-bg">
             <div class="titulo-intro container">
-                <p class="subtitulo-intro">Fale conosco!</p>
-                <h1 class="titulo">Nosso Contato</h1>
+                <p class="subtitulo-intro fadeInLeft" data-anime="200">Fale conosco!</p>
+                <h1 class="titulo fadeInLeft" data-anime="400">Nosso Contato</h1>
             </div>
         </div>
 
-        <div class="contato container">
+        <div class="contato container fadeInUp" data-anime="600">
             <section class="contato-dados" aria-label="Endereço">
                 <h2 class="contato-titulo">Loja Online</h2>
                 <div class="contato-endereco">
@@ -170,6 +171,7 @@
             <p class="footer-descricao">Plushy © Alguns direitos reservados.</p>
         </div>
     </footer>
+    <script src="/simple-anime.js"></script>
     <script src="/script.js"></script>
 </body>
 
