--- a/croche-rena.html
+++ b/croche-rena.html
@@ -7,13 +7,14 @@
     <title>Crochês | Plushy</title>
     <meta name="description" content="Crochês | Plushy.">
 
-    <link rel="preload" href="/css/style.css" as="style">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="preload" href="/css/style.min.css" as="style">
+    <link rel="stylesheet" href="/css/style.min.css">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body>
@@ -40,19 +41,19 @@
     <main class="intro">
         <div class="titulo-intro-bg">
             <div class="titulo-intro container">
-                <p class="subtitulo-intro">Delicados para toda forma de amor</p>
-                <h1 class="titulo">Nossos Crochês</h1>
+                <p class="subtitulo-intro fadeInLeft" data-anime="200">Delicados para toda forma de amor</p>
+                <h1 class="titulo fadeInLeft" data-anime="400">Nossos Crochês</h1>
             </div>
         </div>
 
         <main class="pelucia">
-            <div class="pelucia-bg container">
+            <div class="pelucia-bg container fadeInLeft" data-anime="600">
                 <div class="pelucia-conteudo">
                     <div class="pelucia-imagens">
                         <img src="/img/croches/rena-grande.jpg" width="1120" height="1120" alt="Crochê rena">
                         <img src="/img/croches/la-peq-1.jpg" width="1120" height="1120" alt="Fio de lã">
-                        <img src="/img/croches/la-peq-2.jpg" width="1120" height="1038" alt="Fio de lã">
-                        <img src="/img/croches/la-peq-3.jpg" width="1092" height="1120" alt="Fio de lã">
+                        <img src="/img/croches/la-peq-2.jpg" width="1120" height="1120" alt="Fio de lã">
+                        <img src="/img/croches/la-peq-3.jpg" width="1120" height="1120" alt="Fio de lã">
                     </div>
                     <div class="pelucia-texto">
                         <h2 class="preco-titulo">Crochê Rena</h2>
@@ -113,6 +114,7 @@
                 <p class="footer-descricao">Plushy © Alguns direitos reservados.</p>
             </div>
         </footer>
+        <script src="/simple-anime.js"></script>
         <script src="/script.js"></script>
 </body>
 
