--- a/croche.html
+++ b/croche.html
@@ -7,13 +7,14 @@
     <title>Crochês | Plushy</title>
     <meta name="description" content="Crochês | Plushy.">
 
-    <link rel="preload" href="/css/style.css" as="style">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="preload" href="/css/style.min.css" as="style">
+    <link rel="stylesheet" href="/css/style.min.css">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body>
@@ -40,13 +41,13 @@
     <main class="intro">
         <div class="titulo-intro-bg">
             <div class="titulo-intro container">
-                <p class="subtitulo-intro">Delicados para toda forma de amor</p>
-                <h1 class="titulo">Nossos Crochês</h1>
+                <p class="subtitulo-intro fadeInLeft" data-anime="200">Delicados para toda forma de amor</p>
+                <h1 class="titulo fadeInLeft" data-anime="400">Nossos Crochês</h1>
             </div>
         </div>
 
         <main class="pelucias">
-            <div class="pelucias-item-bg">
+            <div class="pelucias-item-bg fadeInRight" data-anime="600">
                 <div class="pelucias-item container">
                     <div class="pelucias-imagem">
                         <img src="/img/geral/croches-rena.jpg" width="800" height="800" alt="Crochê rena">
@@ -137,6 +138,7 @@
                 <p class="footer-descricao">Plushy © Alguns direitos reservados.</p>
             </div>
         </footer>
+        <script src="/simple-anime.js"></script>
         <script src="/script.js"></script>
 </body>
 
