--- a/termos-condicoes.html
+++ b/termos-condicoes.html
@@ -7,13 +7,14 @@
     <title>Termos e Condições | Plushy</title>
     <meta name="description" content="Termos e Condições | Plushy.">
 
-    <link rel="preload" href="/css/style.css" as="style">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="preload" href="/css/style.min.css" as="style">
+    <link rel="stylesheet" href="/css/style.min.css">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body>
@@ -40,12 +41,12 @@
     <main class="intro">
         <div class="titulo-intro-bg">
             <div class="titulo-intro container">
-                <p class="subtitulo-intro">Termos de Pedido e Uso</p>
-                <h1 class="titulo">Termos e Condições</h1>
+                <p class="subtitulo-intro fadeInLeft" data-anime="200">Termos de Pedido e Uso</p>
+                <h1 class="titulo fadeInLeft" data-anime="400">Termos e Condições</h1>
             </div>
         </div>
 
-        <div class="termos-descricao container">
+        <div class="termos-descricao container fadeInUp" data-anime="600">
             <h2 class="termos-titulo">1. Política de Estorno</h2>
             <p class="termos-subtitulo">1.2 Sed eu arcu blandit, mollis erat a, ultrices odio. Donec et nibh lacinia, semper enim non, venenatis ligula.</p>
             <p class="termos-subtitulo">1.1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut ornare augue. Curabitur tincidunt velit vitae blandit ullamcorper. Etiam at ullamcorper odio, quis mattis quam.</p>
@@ -102,6 +103,7 @@
             <p class="footer-descricao">Plushy © Alguns direitos reservados.</p>
         </div>
     </footer>
+    <script src="/simple-anime.js"></script>
     <script src="/script.js"></script>
 </body>
 
